--- a/_config.yml
+++ b/_config.yml
@@ -43,7 +43,7 @@ flavor: "r"
 # Most workshops don't use extra pages. More information about extra
 # pages are included in the README:
 # https://github.com/carpentries/workshop-template#creating-extra-pages
-title: "Data Carpentry Workshop for the NBIC Community, Organsed by the Software Sustainbility Institute"
+title: "Data Carpentry Workshop for the NBIC Community"
 
 
 #------------------------------------------------------------
