--- a/_config.yml
+++ b/_config.yml
@@ -56,12 +56,12 @@ kind: "workshop"
 # Magic to make URLs resolve both locally and on GitHub.
 # See https://help.github.com/articles/repository-metadata-on-github-pages/.
 # Please don't change it: <USERNAME>/<PROJECT> is correct.
-repository: softwaresaved/2020-11-10-ssi-online
+repository: softwaresaved/2021-03-01-ssi-online
 
 # Email address, no mailto:
 # (Don't change this -- the contact address for your workshop will be set
 # in the index.md file)
-email: "team@carpentries.org"
+email: "a.nenadic@manchester.ac.uk"
 
 # Sites.
 amy_site: "https://amy.carpentries.org"
@@ -78,7 +78,7 @@ swc_site: "https://software-carpentry.org"
 template_repo: "https://github.com/carpentries/styles"
 training_site: "https://carpentries.github.io/instructor-training"
 workshop_repo: "https://github.com/carpentries/workshop-template"
-workshop_site: "https://softwaresaved.github.io/2020-11-10-ssi-online/"
+workshop_site: "https://softwaresaved.github.io/2020-03-01-ssi-online/"
 
 # Surveys.
 pre_survey: "https://carpentries.typeform.com/to/wi32rS?slug="
