--- a/_config.yml
+++ b/_config.yml
@@ -43,7 +43,7 @@ carpentry: "incubator"
 # Most workshops don't use extra pages. More information about extra
 # pages are included in the README:
 # https://github.com/carpentries/workshop-template#creating-extra-pages
-title: "Carpentries Pilot Workshop - Building Websites with Jekyll and GitHub"
+title: "Building Websites with Jekyll and GitHub Pilot Workshop"
 
 
 #------------------------------------------------------------
